Add JDK 17 build support
along with existing support for JDK 8

Co-authored-by: Zac Blanco <zac@ibm.com>
Co-authored-by: Jalpreet Singh Nanda (:imjalpreet) <jalpreetnanda@gmail.com>